syntax = "proto3";

option csharp_namespace = "Taxi.gRPC";

package driver;

// The driver service definition.
service Driver {
  // Gets a driver
  rpc GetDriver (GetDriverRequest) returns (GetDriverReply);
}

// The request message containing a driver's id.
message GetDriverRequest {
  string id = 1;
}

// The response message containing the driver.
message GetDriverReply {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
  string country = 6;
  string state = 7;
  double rating = 8;
  bool is_active = 9;
  bool is_approved = 10;
}
